fix: dark mode contrast for Tags and Share on labels (#10)
* Initial plan

* Fix dark mode contrast issues for Tags and Share on text


* Move font-weight styling from inline to CSS class


---------

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -303,6 +303,11 @@ li {
 /**
   * Share icons
   */
+.share-label {
+  color: #333;
+  font-weight: bold;
+}
+
 .share-buttons {
   display: inline-block;
   vertical-align: middle;
